profilelist1exp/unpackaged/objects/Approval_History__c.object
<CustomObject>
    <fields>
        <fullName>Action_Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Approval Approved</fullName>
                </value>
                <value>
                    <fullName>Approval Cancelled</fullName>
                </value>
                <value>
                    <fullName>Approval Reassigned</fullName>
                </value>
                <value>
                    <fullName>Approval Rejected</fullName>
                </value>
                <value>
                    <fullName>Approval Request Cancelled</fullName>
                </value>
                <value>
                    <fullName>Approval Request Submitted</fullName>
                </value>
                <value>
                    <fullName>Approval Request Updated</fullName>
                </value>
                <value>
                    <fullName>Approval Resent</fullName>
                </value>
                <value>
                    <fullName>Approval Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Request Id</label>
        <referenceTo>Approval_Request__c</referenceTo>
        <relationshipLabel>Approval History</relationshipLabel>
        <relationshipName>Approval_Historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Responsibility__c</fullName>
        <label>Approval Responsibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_History_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reassigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Historys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Justification/Action Items</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notification_Detail__c</fullName>
        <label>Notification Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_s_for_Rejection__c</fullName>
        <label>Reason(s) for Rejection</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Rating__c</fullName>
        <label>Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Approval History</label>
    <nameField>
        <displayFormat>AH-{000000}</displayFormat>
        <label>Approval History Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>